--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.8.0",
     "lucide-react": "^0.488.0",
     "motion": "^12.7.4",
     "next": "13.5.11",
